fixing mbile bug where legend has too much whitespace on right

--- a/public/style.css
+++ b/public/style.css
@@ -299,6 +299,7 @@ fieldset#projectPicker {
 }
 
 legend {
+	width: fit-content;
 	font-size: 1.125rem;
 	font-weight: bold;
 	display: flex;
